--- a/src/app/views/pages/register/register.component.html
+++ b/src/app/views/pages/register/register.component.html
@@ -4,35 +4,60 @@
       <c-col lg="7" md="9" xl="6">
         <c-card class="mx-4">
           <c-card-body class="p-4">
-            <form cForm>
-              <h1>Register</h1>
-              <p class="text-body-secondary">Create your account</p>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>
-                  <svg cIcon name="cilUser"></svg>
-                </span>
-                <input autoComplete="name" cFormControl placeholder="Username" />
-              </c-input-group>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>&#64;</span>
-                <input autoComplete="email" cFormControl placeholder="Email" />
-              </c-input-group>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>
-                  <svg cIcon name="cilLockLocked"></svg>
-                </span>
-                <input autoComplete="new-password" cFormControl placeholder="Password" type="password" />
-              </c-input-group>
-              <c-input-group class="mb-4">
-                <span cInputGroupText>
-                  <svg cIcon name="cilLockLocked"></svg>
-                </span>
-                <input autoComplete="new-password" cFormControl placeholder="Repeat password" type="password" />
-              </c-input-group>
-              <div class="d-grid">
-                <button cButton color="success">Create Account</button>
-              </div>
-            </form>
+            <!-- register.component.html -->
+          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+            <h1>Register</h1>
+            <p class="text-body-secondary">Create your account</p>
+            <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilUser"></svg>
+              </span>
+              <input formControlName="cedula" cFormControl placeholder="Cedula" />
+            </c-input-group>
+            <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilUser"></svg>
+              </span>
+              <input formControlName="nombre" cFormControl placeholder="Nombre" />
+            </c-input-group>
+            <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilUser"></svg>
+              </span>
+              <input formControlName="apellido" cFormControl placeholder="Apellido" />
+            </c-input-group>
+            <!-- <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilUser"></svg>
+              </span>
+              <input formControlName="username" cFormControl placeholder="Username" />
+            </c-input-group> -->
+            <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilUser"></svg>
+              </span>
+              <input formControlName="email" cFormControl placeholder="Username" />
+            </c-input-group>
+            <c-input-group class="mb-3">
+              <span cInputGroupText>
+                <svg cIcon name="cilLockLocked"></svg>
+              </span>
+              <input formControlName="password" type="password" cFormControl placeholder="Password" />
+            </c-input-group>
+            <c-input-group class="mb-4">
+              <span cInputGroupText>
+                <svg cIcon name="cilLockLocked"></svg>
+              </span>
+              <input formControlName="confirmPassword" type="password" cFormControl placeholder="Repeat password" />
+            </c-input-group>
+            <div class="d-grid">
+              <button cButton color="success" type="submit">Create Account</button>
+            </div><br>
+            <div class="d-grid">
+              <button cButton color="secondary" type="button" (click)="onCancel()">Cancelar</button>
+            </div>
+          </form>
+
           </c-card-body>
         </c-card>
       </c-col>
