--- a/src/app/views/mapa/mapa.component.html
+++ b/src/app/views/mapa/mapa.component.html
@@ -1,1 +1,4 @@
-<h1>HOKA MUNDO</h1>
+<!-- google-map-demo.component.html -->
+<google-map height="700px" width="100%" [center]="center" [zoom]="zoom">
+    <map-heatmap-layer [data]="heatmapData" [options]="heatmapOptions" />
+  </google-map>
