--- a/src/app/views/pages/register/register.component.html
+++ b/src/app/views/pages/register/register.component.html
@@ -10,19 +10,19 @@
             <p class="text-body-secondary">Create your account</p>
             <c-input-group class="mb-3">
               <span cInputGroupText>
-                <svg cIcon name="cilUser"></svg>
+                <svg cIcon name="cilCreditCard"></svg>
               </span>
               <input formControlName="cedula" cFormControl placeholder="Cedula" />
             </c-input-group>
             <c-input-group class="mb-3">
               <span cInputGroupText>
-                <svg cIcon name="cilUser"></svg>
+                <svg cIcon name="cilItalic"></svg>
               </span>
               <input formControlName="nombre" cFormControl placeholder="Nombre" />
             </c-input-group>
             <c-input-group class="mb-3">
               <span cInputGroupText>
-                <svg cIcon name="cilUser"></svg>
+                <svg cIcon name="cilItalic"></svg>
               </span>
               <input formControlName="apellido" cFormControl placeholder="Apellido" />
             </c-input-group>
