--- a/src/app/views/dispositivo/dispositivo.component.html
+++ b/src/app/views/dispositivo/dispositivo.component.html
@@ -1,1 +1,58 @@
-<p>dispositivo works!</p>
+<table 
+          align="middle"
+          cTable
+          class="mb-0 border"
+        >
+          <thead class="text-nowrap text-truncate">
+          <tr>
+            <th class="bg-body-tertiary text-center ">
+              <svg cIcon name="cilPeople"></svg>
+            </th>
+            <th class="bg-body-tertiary">User</th>
+            <th class="bg-body-tertiary text-center">Country</th>
+            <th class="bg-body-tertiary">Usage</th>
+            <th class="bg-body-tertiary text-center">Payment Method</th>
+            <th class="bg-body-tertiary">Activity</th>
+          </tr>
+          </thead>
+          <tbody>
+            @for (user of users; track user.name; let i = $index) {
+              <tr>
+                <td class="text-center">
+                  <c-avatar [size]="'md'" src="{{ user.avatar }}" status="{{ user.status }}" />
+                </td>
+                <td>
+                  <div>{{ user.name }}</div>
+                  <div class="small text-body-secondary text-nowrap">
+                  <span>
+                    {{ user.state }} | Registered: {{ user.registered }}
+                  </span>
+                  </div>
+                </td>
+                <td class="text-center">
+                  <svg></svg>
+                </td>
+                <td>
+                  <div class="d-flex justify-content-between">
+                    <div class="float-start">
+                      <strong>{{ user.usage }}%</strong>
+                    </div>
+                    <div class="float-end ms-1 text-nowrap">
+                      <small class="text-body-secondary">
+                        {{ user.period }}
+                      </small>
+                    </div>
+                  </div>
+                  <c-progress thin [value]="user.usage" color="{{ user.color }}" aria-label="Usage" />
+                </td>
+                <td class="text-center">
+                  <svg></svg>
+                </td>
+                <td>
+                  <div class="small text-body-secondary">Last login</div>
+                  <div class="fw-semibold text-nowrap">{{ user.activity }}</div>
+                </td>
+              </tr>
+            }
+          </tbody>
+        </table>
