--- a/src/app/views/dispositivo/dispositivo.component.html
+++ b/src/app/views/dispositivo/dispositivo.component.html
@@ -1,58 +1,63 @@
-<table 
+<c-row>
+  <c-col xs>
+    <c-card class="mb-4">
+      <c-card-body>
+        <h5 class="card-title">Dispositivos</h5>
+        <table
+          [hover]="true"
+          [responsive]="true"
+          [striped]="true"
           align="middle"
           cTable
           class="mb-0 border"
         >
           <thead class="text-nowrap text-truncate">
           <tr>
-            <th class="bg-body-tertiary text-center ">
-              <svg cIcon name="cilPeople"></svg>
-            </th>
-            <th class="bg-body-tertiary">User</th>
-            <th class="bg-body-tertiary text-center">Country</th>
-            <th class="bg-body-tertiary">Usage</th>
-            <th class="bg-body-tertiary text-center">Payment Method</th>
-            <th class="bg-body-tertiary">Activity</th>
+            <th class="bg-body-tertiary"> Id </th>
+            <th class="bg-body-tertiary text-center">Marca-Modelo</th>
+            <th class="bg-body-tertiary text-center">Num Serie</th>
+            <th class="bg-body-tertiary text-center">Nombre</th>
+            <th class="bg-body-tertiary text-center">Estado</th>
+            <th class="bg-body-tertiary text-center">Categoria</th>
           </tr>
           </thead>
           <tbody>
-            @for (user of users; track user.name; let i = $index) {
-              <tr>
-                <td class="text-center">
-                  <c-avatar [size]="'md'" src="{{ user.avatar }}" status="{{ user.status }}" />
+    
+              <tr class="bg-body-tertiary text-center" *ngFor="let dispo of dispositivos; let i = index" >
+                <td>
+                   <div>                     
+                      {{ dispo.id_dispositivo }}   <!--se supoeque que aqui va el id del dispo -->           
+                   </div>
                 </td>
                 <td>
-                  <div>{{ user.name }}</div>
+                  <div>{{ dispo.modelo?.marca?.nombre }}</div>
                   <div class="small text-body-secondary text-nowrap">
                   <span>
-                    {{ user.state }} | Registered: {{ user.registered }}
+                    {{ dispo.modelo?.nombre }} <!--se supoeque que aqui vamarca y modelo -->  
                   </span>
                   </div>
                 </td>
-                <td class="text-center">
-                  <svg></svg>
+                <td>
+
+                  <div class="fw-semibold text-nowrap">{{ dispo.numero_serie }}</div>  <!--se supoeque que aqui el numero de serie-->  
                 </td>
                 <td>
-                  <div class="d-flex justify-content-between">
-                    <div class="float-start">
-                      <strong>{{ user.usage }}%</strong>
-                    </div>
-                    <div class="float-end ms-1 text-nowrap">
-                      <small class="text-body-secondary">
-                        {{ user.period }}
-                      </small>
-                    </div>
+                  <div class="fw-semibold text-nowrap">{{ dispo.nombre }}</div> <!--se supoeque que aqui el nombre-->  
+                </td>
+                <td>
+                  <div class="fw-semibold text-nowrap"
+                       [ngStyle]="{ 'color': dispo.disponible ? 'green' : 'red', 'font-weight': dispo.disponible ? 'bold' : 'normal' }">
+                    {{ dispo.disponible ? 'Disponible' : 'Prestado' }}
                   </div>
-                  <c-progress thin [value]="user.usage" color="{{ user.color }}" aria-label="Usage" />
-                </td>
-                <td class="text-center">
-                  <svg></svg>
                 </td>
                 <td>
-                  <div class="small text-body-secondary">Last login</div>
-                  <div class="fw-semibold text-nowrap">{{ user.activity }}</div>
+                  <div class="fw-semibold text-nowrap">{{ dispo.categoria?.nombre }}</div>  <!--se supoeque que aqui el cate-->  
                 </td>
               </tr>
-            }
+            
           </tbody>
         </table>
+      </c-card-body>
+    </c-card>
+  </c-col>
+</c-row>
