--- a/src/app/views/mapa/mapa.component.scss
+++ b/src/app/views/mapa/mapa.component.scss
@@ -1,10 +1,12 @@
 #map-container {
     position: relative;
+    margin: 10px 0;
 }
 
 .button-container {
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #guardar-punto-seguro {
