--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -47,8 +47,10 @@
               <div>
                 <h2>Sign up</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
+                  Sistema de monitoreo de Dispositivos Android
+                </p>
+                <p>
+                  "JEDANK"
                 </p>
                 <button [active]="true" cButton class="mt-3" color="primary" (click)="register()">
                   Register Now!
