--- a/src/app/views/mapa/mapa.component.html
+++ b/src/app/views/mapa/mapa.component.html
@@ -1,13 +1,39 @@
-<div id="map-container">
-  <google-map
-    height="600px"
-    width="100%"
-    [center]="center"
-    [zoom]="zoom"
-    (mapClick)="addMarker($event)">
-    <map-marker *ngFor="let position of markerPositions; trackBy: trackByFn" [position]="position" [options]="markerOptions"></map-marker>
-  </google-map>
-</div>
 <div class="button-container">
-  <button id="guardar-punto-seguro" (click)="ingresarZona()">Guardar Zona Seguro</button>
+  <button (click)="toggleView()">
+    {{ mostrarZonas ? "Ver Otras Posiciones" : "Ver Zonas" }}
+  </button>
 </div>
+
+<div *ngIf="mostrarZonas; else otrasPosiciones">
+  <div id="map-container">
+    <google-map
+      height="600px"
+      width="100%"
+      [center]="center"
+      [zoom]="zoom"
+      (mapClick)="addMarker($event)"
+    >
+      <map-marker
+        *ngFor="let position of markerPositions"
+        [position]="position"
+      ></map-marker>
+    </google-map>
+  </div>
+  <div class="button-container">
+    <button id="guardar-punto-seguro" (click)="ingresarZona()">
+      Guardar Zona Segura
+    </button>
+  </div>
+</div>
+
+<ng-template #otrasPosiciones>
+  <div id="map-container">
+    <google-map height="600px" width="100%" [center]="center" [zoom]="zoom">
+      <map-marker
+        *ngFor="let posicion of this.posiciones"
+        [position]="{ lat: posicion.latitud, lng: posicion.longitud }"
+      >
+      </map-marker>
+    </google-map>
+  </div>
+</ng-template>
