--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -36,6 +36,10 @@
     </c-header-nav>
 
     <c-header-nav class="ms-auto ms-md-0">
+      <ng-container *ngTemplateOutlet="ConfigDropdown" />
+    </c-header-nav>
+
+    <c-header-nav class="ms-auto ms-md-0">
       <div class="nav-item py-1">
         <div class="vr h-100 mx-2 text-body text-opacity-75"></div>
       </div>
@@ -177,6 +181,59 @@
           {{ mode.text }}
         </button>
       }
+    </div>
+  </c-dropdown>
+</ng-template>
+
+<ng-template #ConfigDropdown>
+  <c-dropdown alignment="end" variant="nav-item" [autoClose]="false">
+    <button [caret]="false" cDropdownToggle aria-label="Open configuration picker" (click)="crud_close()">
+      <svg cIcon name="cilSettings" size="lg"></svg>
+    </button>
+    <div cDropdownMenu style="width: 260px; padding: 10px;"> <!-- Ajuste de anchura y padding -->
+      <div>
+        <h5 class="card-title d-flex align-items-center mb-3">Tiempo de reporte</h5>
+        <h5 class="card-title d-flex align-items-center mb-3">
+          Configuración Actual
+          <span class="ms-2">
+            <span class="d-inline-block">
+              <button class="btn p-0 ml-2" (click)="desplegarcrud()"> <svg cIcon name="cilPencil" size="lg"></svg></button>
+             
+            </span>
+          </span>
+        </h5>
+
+        <div style="margin-left: 10px;"> <!-- Ajuste de margen izquierdo -->
+          <span>Tiempo de Respuesta</span>
+          <label class="d-block mt-2">
+            <div class="morado">{{configuracion.tiempoRespuesta}} Segundos</div>
+          </label>
+          <!-- Aquí van los campos para editar la configuración -->
+
+          <div *ngIf="showTable">
+         
+          <form>
+            <div class="form-group">
+
+              <label for="horas">Horas:</label>
+              <input id="hora" class="form-control" min="0" type="number"  placeholder="Horas" [(ngModel)]="hora" name="hora" />
+              
+            </div>
+            <div class="form-group">
+              <label for="minutos">Minutos:</label>
+              <input id="minuto" class="form-control" min="0" max="59" type="number" placeholder="Minutos" [(ngModel)]="minuto" name="minuto" />
+            </div>
+            <div class="form-group">
+              <label for="segundos">Segundos:</label>
+              <input id="segundo" class="form-control" min="0" max="59" type="number" placeholder="Segundos" [(ngModel)]="segundo" name="segundo" />
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary" (click)="actualizartiempo()" >Guardar</button>
+          </form>
+        </div>
+        
+        </div>
+      </div>
     </div>
   </c-dropdown>
 </ng-template>
