--- a/src/app/layout/default-layout/default-header/default-header.component.scss
+++ b/src/app/layout/default-layout/default-header/default-header.component.scss
@@ -13,3 +13,6 @@
     color: #5856d6; /* Color morado */
     font-weight: bold; /* Texto en negrita */
   }
+  .full-width-range {
+    width: 100%;
+  }
