--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -24,7 +24,7 @@
           </span>
           <select class="form-select" formControlName="dispositivo" cFormControl>
             <option value="" disabled selected>Seleccione un Dispositivo</option>
-            <option *ngFor="let dispo of dispositivos" [value]="dispo.id_dispositivo">
+            <option *ngFor="let dispo of dispositivos" [value]="dispo.idDispositivo">
               {{ dispo.nombre }}-{{ dispo.modelo?.marca?.nombre }}
             </option>
           </select>
@@ -114,7 +114,7 @@
                 </span>
                 <select class="form-select" formControlName="dispositivo">
                   <option value="" disabled selected>Seleccione un Dispositivo</option>
-                  <option *ngFor="let dispo of dispositivos" [value]="dispo.id_dispositivo">
+                  <option *ngFor="let dispo of dispositivos" [value]="dispo.idDispositivo">
                     {{ dispo.nombre }}-{{ dispo.modelo?.marca?.nombre }}
                   </option>
                 </select>
