--- a/src/app/views/dispositivo/dispositivo.component.html
+++ b/src/app/views/dispositivo/dispositivo.component.html
@@ -37,7 +37,7 @@
             <tbody>
               <tr class="bg-body-tertiary text-center" *ngFor="let dispo of dispositivos | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
                 <td>
-                  <div>{{ dispo.id_dispositivo }}</div>
+                  <div>{{ dispo.idDispositivo }}</div>
                 </td>
                 <td>
                   <div>{{ dispo.modelo?.marca?.nombre }}</div>
