--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -11,18 +11,30 @@
           <span cInputGroupText>
             <svg cIcon name="cilCreditCard"></svg>
           </span>
-          <select class="form-select" formControlName="beneficiario" cFormControl>
+          <select class="form-select" formControlName="beneficiario" cFormControl required
+                  data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                  [class.is-invalid]="registerFormIn.get('beneficiario')?.invalid && (registerFormIn.get('beneficiario')?.touched || registerFormIn.get('beneficiario')?.dirty)"
+                  (mouseenter)="showBeneficiarioTooltip()" (mouseleave)="hideBeneficiarioTooltip()"
+           >
             <option value="" disabled selected>Seleccione un Beneficiario</option>
             <option *ngFor="let persona of personas" [value]="persona.id_persona">
               {{ persona.nombre }} {{ persona.apellido }}
             </option>
           </select>
+          <div *ngIf="showTooltip" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+            <div class="arrow"></div>
+            <span>Debe elegir un beneficiario.</span>
+          </div>
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilItalic"></svg>
           </span>
-          <select class="form-select" formControlName="dispositivo" cFormControl>
+          <select class="form-select" formControlName="dispositivo" cFormControl
+                  data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                  [class.is-invalid]="registerFormIn.get('beneficiario')?.invalid && (registerFormIn.get('beneficiario')?.touched || registerFormIn.get('beneficiario')?.dirty)"
+                  (mouseenter)="showBeneficiarioTooltip()" (mouseleave)="hideBeneficiarioTooltip()"
+          >
             <option value="" disabled selected>Seleccione un Dispositivo</option>
             <option *ngFor="let dispo of dispositivos" [value]="dispo.idDispositivo">
               {{ dispo.nombre }}-{{ dispo.modelo?.marca?.nombre }}
@@ -60,7 +72,7 @@
         </div>
       </form>
     </div>
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" *ngIf="!mostrarFormularioIngreso  ">
       <thead>
         <tr>
           <th>Beneficiario</th>
@@ -84,7 +96,7 @@
             {{ prestamo.fecha_finalizacion ? prestamo.fecha_finalizacion.toString().split("T")[0]: 'NA' }}
           </td>
           <td>{{ prestamo.motivo_prestamo }}</td>
-          <td>{{ prestamo.finalizado }}</td>
+          <td>{{ prestamo.finalizado ? 'Finalizado' : 'En proceso' }}</td>
           <td>
             <button type="button" name="button" (click)="edit(i)" class="btn btn-primary">Editar</button>
           </td>
